--- a/index.html
+++ b/index.html
@@ -9,54 +9,216 @@
       <title>Document</title>
    </head>
 
-   <body>
-      <!-- Navbar Start -->
-      <nav>
-         <div>
-            <h1><a href="/">Online Store</a></h1>
-            <ul>
-               <li>
-                  <a href="#"><span>Home</span></a>
-               </li>
-               <li>
-                  <a href="#"><span>About</span></a>
-               </li>
-               <li>
-                  <a href="#"><span>Contact</span></a>
-               </li>
-            </ul>
-         </div>
-      </nav>
-      <!-- Navbar End -->
-
-      <!-- Content Start -->
-      <main>
-         <div><a href="#">Login</a> <a href="#">Sign up</a></div>
-
-         <header>
-            <h2>Recipes</h2>
-            <h3></h3>
-         </header>
-
-         <div>
-            <h4>Latest Recipes</h4>
-            <div>
-               <!--Card Go Here -->
-               <div>
-                  <img src="img/stew.jpg" alt="Strew" />
-                  <div><span>5 Bean Chilli Strew</span><span>Recipe by Andrew</span></div>
+   <body class="font-body text-gray-600">
+      <!-- Content Wrapper Start -->
+      <div class="grid md:grid-cols-9 lg:grid-cols-7">
+         <!-- Navbar Start -->
+         <nav class="md:col-span-2 lg:col-span-1">
+            <div class="border-gray-100 border flex justify-between md:justify-center items-center">
+               <div class="font-bold uppercase p-4 font-brand text-start md:text-center">
+                  <a href="/" class="cursor-pointer">
+                     <span class="hover:text-gray-800 transition ease-linear duration-200">Pizza King</span>
+                  </a>
+               </div>
+               <div class="p-4 cursor-pointer md:hidden" id="burger">
+                  <svg
+                     class="w-6"
+                     xmlns="http://www.w3.org/2000/svg"
+                     class="h-6 w-6"
+                     fill="none"
+                     viewBox="0 0 24 24"
+                     stroke="currentColor"
+                     stroke-width="2"
+                  >
+                     <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+                  </svg>
                </div>
             </div>
 
-            <h4>Most Popular</h4>
-            <div>
-               <!--Cards Go Here -->
+            <ul class="text-sm my-5 md:flex flex-col justify-center items-center md:items-end hidden" id="menu">
+               <li class="flex justify-center md:block">
+                  <a href="#" class="md:flex justify-center flex py-2 px-3 md:border-r-4 md:border-red-400">
+                     <span class="mr-2">Home</span>
+                     <svg
+                        class="w-5"
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-6 w-6"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor"
+                        stroke-width="2"
+                     >
+                        <path
+                           stroke-linecap="round"
+                           stroke-linejoin="round"
+                           d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+                        />
+                     </svg>
+                  </a>
+               </li>
+               <li class="flex justify-center md:block">
+                  <a href="#" class="md:flex justify-center flex py-2 px-3 border-r-4 border-transparent"
+                     ><span class="mr-2">About</span>
+                     <svg
+                        class="w-5"
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-6 w-6"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor"
+                        stroke-width="2"
+                     >
+                        <path
+                           stroke-linecap="round"
+                           stroke-linejoin="round"
+                           d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z"
+                        />
+                     </svg>
+                  </a>
+               </li>
+               <li class="flex justify-center md:block">
+                  <a href="#" class="md:flex justify-center flex py-2 px-3 border-r-4 border-transparent"
+                     ><span class="mr-2">Contact</span>
+                     <svg
+                        class="w-5"
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-6 w-6"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor"
+                        stroke-width="2"
+                     >
+                        <path
+                           stroke-linecap="round"
+                           stroke-linejoin="round"
+                           d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                        />
+                     </svg>
+                  </a>
+               </li>
+            </ul>
+         </nav>
+         <!-- Navbar End -->
+
+         <!-- Content Start -->
+         <main class="px-16 py-6 md:col-span-7 lg:col-span-6 bg-gray-100">
+            <div class="text-red-500 flex md:justify-end justify-center">
+               <a
+                  href="#"
+                  class="btn border-red-500 md:border-2 md:bg-red-500 md:text-white hover:bg-white hover:text-red-500 transition ease-linear duration-150"
+                  >Login</a
+               >
+               <a
+                  href="#"
+                  class="btn border-red-500 md:border-2 hover:bg-red-500 hover:text-white transition ease-linear duration-150"
+                  >Sign up</a
+               >
             </div>
-            <div><div>Load more</div></div>
-         </div>
-      </main>
-      <!-- Content End -->
+
+            <header>
+               <h2 class="text-gray-700 font-semibold text-6xl font-title">Recipes</h2>
+               <h3 class="text-2xl font-semibold">For Lunch</h3>
+            </header>
+
+            <div>
+               <h4 class="font-bold mt-12 pb-2 border-b-2 border-red-400">Latest Recipes</h4>
+               <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-5 md:gap-3 lg:gap-8">
+                  <!--Card Go Here -->
+                  <div class="card hover:shadow-lg">
+                     <img src="img/stew.jpg" class="w-full h-32 sm:h-48 object-cover" alt="Strew" />
+                     <div class="m-4">
+                        <span class="font-bold">5 Bean Chilli Strew</span>
+                        <span class="block text-gray-400 text-sm">Recipe by Andrew</span>
+                     </div>
+                     <div class="badge">
+                        <svg
+                           class="w-4 inline-block mr-1"
+                           xmlns="http://www.w3.org/2000/svg"
+                           class="h-6 w-6"
+                           fill="none"
+                           viewBox="0 0 24 24"
+                           stroke="currentColor"
+                           stroke-width="2"
+                        >
+                           <path
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                           />
+                        </svg>
+                        <span>25 mins</span>
+                     </div>
+                  </div>
+                  <div class="card hover:shadow-lg">
+                     <img src="img/noodles.jpg" class="w-full h-32 sm:h-48 object-cover" alt="Noodles" />
+                     <div class="m-4">
+                        <span class="font-bold">Cheese Noodle</span>
+                        <span class="block text-gray-400 text-sm">Recipe by Morgan</span>
+                     </div>
+                     <div class="badge">
+                        <svg
+                           class="w-4 inline-block mr-1"
+                           xmlns="http://www.w3.org/2000/svg"
+                           class="h-6 w-6"
+                           fill="none"
+                           viewBox="0 0 24 24"
+                           stroke="currentColor"
+                           stroke-width="2"
+                        >
+                           <path
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                           />
+                        </svg>
+                        <span>25 mins</span>
+                     </div>
+                  </div>
+                  <div class="card hover:shadow-lg">
+                     <img src="img/curry.jpg" class="w-full h-32 sm:h-48 object-cover" alt="Curry" />
+                     <div class="m-4">
+                        <span class="font-bold">Tofu Curry</span>
+                        <span class="block text-gray-400 text-sm">Recipe by John</span>
+                     </div>
+                     <div class="badge">
+                        <svg
+                           class="w-4 inline-block mr-1"
+                           xmlns="http://www.w3.org/2000/svg"
+                           class="h-6 w-6"
+                           fill="none"
+                           viewBox="0 0 24 24"
+                           stroke="currentColor"
+                           stroke-width="2"
+                        >
+                           <path
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                           />
+                        </svg>
+                        <span>25 mins</span>
+                     </div>
+                  </div>
+               </div>
+
+               <h4 class="font-bold mt-12 pb-2 border-b-2 border-red-400">Most Popular</h4>
+               <div class="mt-8">
+                  <!--Cards Go Here -->
+               </div>
+               <div class="flex justify-center">
+                  <div
+                     class="btn bg-red-500 text-white border-red-500 border-2 transform hover:scale-105 hover:opacity-90 transition ease-out duration-300"
+                  >
+                     Load more
+                  </div>
+               </div>
+            </div>
+         </main>
+         <!-- Content End -->
+      </div>
+      <!-- Content Wrapper End -->
    </body>
 
    <!-- Script -->
+   <script src="javascript/app.js"></script>
 </html>
